--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.4.0",
     "chalk": "^5.3.0",
     "inquirer": "^9.2.10",
+    "prompt-sync": "^4.2.0",
     "readline": "^1.3.0"
   },
   "devDependencies": {
-    "@types/inquirer": "^9.0.3"
+    "@types/inquirer": "^9.0.3",
+    "@types/prompt-sync": "^4.2.0"
   }
 }
