--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.3",
-    "@types/prompt-sync": "^4.2.0"
+    "@types/prompt-sync": "^4.2.0",
+    "@types/uuid": "^9.0.2"
   }
 }
